Upgrade to vertx 5 (#670)
* CI version changes

* Bump configured version

* Update unit test resources

* Update Maven compiler plugin configs

* Add vertx-launcher-application dep

* Fixes for RedeployIT

* Fixes for invoker itests

* Illegal access profile should no longer be required

* Replace setup for Vert.x 5 test with setup for Vert.x 4

Also, the setup with diff version is redundant.

* Snapshot no longer required

* Replace run for Vert.x 5 test with run for Vert.x 4