@@ -96,7 +96,7 @@
         <jline.version>3.30.3</jline.version>
 
         <!-- Test dependency versions -->
-        <vertx-core.version>4.5.8</vertx-core.version>
+        <vertx-core.version>5.0.0</vertx-core.version>
         <assertj-core.version>3.27.3</assertj-core.version>
         <junit.version>4.13.2</junit.version>
         <maven-verifier.version>1.8.0</maven-verifier.version>
@@ -381,34 +381,6 @@
     </build>
 
     <profiles>
-        <profile>
-            <id>illegal-access</id>
-            <activation>
-                <jdk>[9,17)</jdk>
-            </activation>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-surefire-plugin</artifactId>
-                            <version>${maven-failsafe-plugin.version}</version>
-                            <configuration>
-                                <argLine>--illegal-access=permit</argLine>
-                            </configuration>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-failsafe-plugin</artifactId>
-                            <version>${maven-failsafe-plugin.version}</version>
-                            <configuration>
-                                <argLine>--illegal-access=permit</argLine>
-                            </configuration>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-            </build>
-        </profile>
         <profile>
             <id>run-its</id>
             <activation>
